# unbalanced_monge_maps_single_cell

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
docs/: api.md  conf.py
neural_ot/: __init__.py  environment.yml  train.py
neural_ot/configs/: gastrulation_makkuva.yaml  gaussian_wtwogn.yaml
neural_ot/data/: __init__.py  anndataset.py  data_utils.py  gaussian_mixture.py  guassian_mixture.py  jax_data.py  numpy_dataset.py
neural_ot/models/: __init__.py  icnn.py  neural_dual.py
neural_ot/solvers/: __init__.py  neural_dual_solver.py
neural_ot/utils/: __init__.py  data_utils.py  load_models.py  metrics.py  neural_dual.py  neural_dual_solver.py  ot_utils.py
notebooks/: 5_dim_gaussian.ipynb  5_dim_multi_gaussian.ipynb  cellrank_template.ipynb  gastrulation8285_TrajNet.ipynb  gastrulation8285_WOT.ipynb  gastrulation8285_gex_velocity_branch.ipynb  gastrulation8285_pmms.ipynb  gastrulation8285_scvelo.ipynb  gastrulation_growthrates.ipynb  high_dim.ipynb  larry_invitro46_wot.ipynb  larry_invitro_growthrates.ipynb  larry_invitro_scvelo.ipynb  neural_dual.ipynb  pancreas1415_MongVelo.ipynb  pancreas1415_eval.ipynb  pancreas_growthrates.ipynb  plots.ipynb  preprocessing.ipynb  preprocessing_pancreas.ipynb  sc_preprocessing_environment.yml  scvelo_e145.ipynb  scvelo_e155.ipynb  unbalanced_uniform_eval.ipynb  uniform_standard_ot.ipynb  velconf_comparison.ipynb  wot.ipynb
notebooks/gastrulation/: Untitled.ipynb  gastrulation8285_branch_scvelo.ipynb  gastrulation8285_branch_wot.ipynb  gastrulation8285_gex_velocity_branch-checkpoint.ipynb  gastrulation_branch_MongeVelo-checkpoint.ipynb  gastrulation_branch_MongeVelo.ipynb  gastrulation_branch_scvelo.ipynb  (+1 more)
tests/: test_basic.py
(+41 files in other folders)
