[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.4,<4",
    "importlib_metadata>=0.7; python_version < '3.8'",
]


[project]
name = "neural_ot"
description = "A very interesting piece of code"
authors = [
    {name = "Luca Eyring"},
]
maintainers = [
    {name = "Luca Eyring", email = "luca.eyring@gmail.com"},
]
urls.Documentation = "https://Neural-OT.readthedocs.io/"
urls.Source = "https://github.com/theislab/Neural-OT"
urls.Home-page = "https://github.com/theislab/Neural-OT"
version = "0.1"
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["anndata"]

[project.optional-dependencies]
dev = [
    # dev version generation
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["neural_ot"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    # "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
